@@ -219,7 +219,7 @@ $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['2']['29']	= "The Paymentech ident
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['2']['30']	= "The configuration with the processor is invalid. Call Merchant Service Provider. ";
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['2']['31']	= "The FDC Merchant ID or Terminal ID is incorrect. Call Merchant Service Provider. - The merchant was incorrectly set up at the processor.";
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['3']['32']	= "This reason code is reserved or not applicable to this API. ";
-$GLOBALS['TL_LANG']['MSG']['authorizedotnet']['3']['33']	= "FIELD cannot be left blank. - The word FIELD will be replaced by an actual field name. This error indicates that a field the merchant specified as required was not filled in. Please see the Form Settings topic in the Merchant Integration Guide for more information.";
+$GLOBALS['TL_LANG']['MSG']['authorizedotnet']['3']['33']	= "A field the merchant specified as required was not filled in. Please see the Form Settings topic in the Merchant Integration Guide for more information.";
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['2']['34']	= "The VITAL identification numbers are incorrect. Call Merchant Service Provider. - The merchant was incorrectly set up at the processor.";
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['2']['35']	= "An error occurred during processing. Call Merchant Service Provider. - The merchant was incorrectly set up at the processor.";
 $GLOBALS['TL_LANG']['MSG']['authorizedotnet']['3']['36']	= "The authorization was approved, but settlement failed. ";
