@@ -28,6 +28,7 @@ Version 0.2.3 (2010-12-??)
 - Fixed division by zero error message in product list
 - Fixed mail templates, parseSimpleTokens stripped important HTML tags
 - Dropped italian regions (Ticket #305)
+- Fixed Authorize.net failed transaction bug
 
 Version 0.2.2 (2010-12-05)
 ------------------------------
